[gd_scene load_steps=22 format=3 uid="uid://b53l8y3nioja0"]

[ext_resource type="Script" uid="uid://cs8v6tgmgw7w8" path="res://scripts/entities/enemy_3d.gd" id="1_jcnff"]
[ext_resource type="Script" uid="uid://doftyixbd3an8" path="res://scripts/entities/combat/enemy_hurt_box.gd" id="2_7qbly"]
[ext_resource type="PackedScene" uid="uid://di8uq4k5dfjtq" path="res://scenes/models/enemy_model.tscn" id="8_8ktbn"]
[ext_resource type="Script" uid="uid://b3iyupm8a5he2" path="res://scripts/entities/enemy/aggro_area.gd" id="9_o04nf"]
[ext_resource type="Script" uid="uid://deb60yher4wfl" path="res://scripts/entities/enemy/deaggro_area.gd" id="10_bcfhc"]
[ext_resource type="Script" uid="uid://bqnr5hyceu623" path="res://addons/godot_state_charts/state_chart.gd" id="11_04jnc"]
[ext_resource type="Script" uid="uid://2uiluckqn7ba" path="res://scripts/state_machine/enemy_states/fighting.gd" id="11_rcfw5"]
[ext_resource type="Script" uid="uid://bt4iqisaqggy8" path="res://addons/godot_state_charts/compound_state.gd" id="12_jlbm1"]
[ext_resource type="Script" uid="uid://cmybi67ruvtka" path="res://scripts/state_machine/enemy_states/dead.gd" id="12_nsewa"]
[ext_resource type="Script" uid="uid://bm4a5s8vovnwv" path="res://addons/godot_state_charts/atomic_state.gd" id="13_ixm0y"]
[ext_resource type="Script" uid="uid://btg0k6scpejn3" path="res://addons/godot_state_charts/transition.gd" id="14_udhym"]
[ext_resource type="Script" uid="uid://bf2nikgdhcgty" path="res://scripts/state_machine/enemy_states/aggroed.gd" id="15_281cp"]
[ext_resource type="Script" uid="uid://cgrbki6hklb5q" path="res://scripts/utility_scripts/collectible_spawner.gd" id="16_77r1b"]
[ext_resource type="Script" uid="uid://dlye65oy0c6c0" path="res://scripts/state_machine/enemy_states/deaggroed.gd" id="16_lpxu5"]
[ext_resource type="Script" uid="uid://doylfv46820k0" path="res://scripts/state_machine/enemy_states/hurt.gd" id="17_cyc3y"]
[ext_resource type="PackedScene" uid="uid://b6xrt3tukrxl8" path="res://scenes/vfx/blood_spawner.tscn" id="20_5vdc7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rcfw5"]
radius = 0.14131
height = 0.6

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nsewa"]
radius = 0.1
height = 0.6

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2dase"]
height = 0.55
radius = 1.84473

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a7qny"]
height = 0.55
radius = 4.0

[sub_resource type="BoxShape3D" id="BoxShape3D_7qbly"]
size = Vector3(0.1, 0.5, 0.251245)

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_jcnff")

[node name="EnemyCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
shape = SubResource("CapsuleShape3D_rcfw5")

[node name="EnemyModel" parent="." instance=ExtResource("8_8ktbn")]
transform = Transform3D(0.37, 0, 0, 0, -1.61732e-08, -0.37, 0, 0.37, -1.61732e-08, 0, 0, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.1
path_max_distance = 0.11

[node name="EnemyHurtBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
monitorable = false
script = ExtResource("2_7qbly")

[node name="EnemyHurtBoxShape" type="CollisionShape3D" parent="EnemyHurtBox"]
shape = SubResource("CapsuleShape3D_nsewa")
debug_color = Color(0.898355, 0.0965723, 0.727596, 0.42)

[node name="AggroArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("9_o04nf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AggroArea" groups=["collisions"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27, 0)
shape = SubResource("CylinderShape3D_2dase")
debug_color = Color(0.999597, 0, 0.107821, 0.42)

[node name="DeaggroArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("10_bcfhc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeaggroArea" groups=["collisions"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27, 0)
shape = SubResource("CylinderShape3D_a7qny")
debug_color = Color(0.270519, 0.624619, 0.296623, 0.42)
debug_fill = false

[node name="PlayerDetectorArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27, 0.170544)
shape = SubResource("BoxShape3D_7qbly")
debug_color = Color(0.853828, 0.368244, 0.0480085, 0.42)

[node name="StateChart" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_04jnc")
metadata/_custom_type_script = "uid://bqnr5hyceu623"

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("12_jlbm1")
initial_state = NodePath("Deaggroed")

[node name="Deaggroed" type="Node" parent="StateChart/Root"]
script = ExtResource("13_ixm0y")

[node name="ToAggroed" type="Node" parent="StateChart/Root/Deaggroed"]
script = ExtResource("14_udhym")
to = NodePath("../../Aggroed")
event = &"aggroed"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateChart/Root/Deaggroed"]
script = ExtResource("14_udhym")
to = NodePath("../../Hurt")
event = &"hurt"
delay_in_seconds = "0.0"

[node name="Aggroed" type="Node" parent="StateChart/Root"]
script = ExtResource("13_ixm0y")

[node name="ToFighting" type="Node" parent="StateChart/Root/Aggroed"]
script = ExtResource("14_udhym")
to = NodePath("../../Fighting")
event = &"player_found"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateChart/Root/Aggroed"]
script = ExtResource("14_udhym")
to = NodePath("../../Hurt")
event = &"hurt"
delay_in_seconds = "0.0"

[node name="ToDeaggroed" type="Node" parent="StateChart/Root/Aggroed"]
script = ExtResource("14_udhym")
to = NodePath("../../Deaggroed")
event = &"deaggroed"
delay_in_seconds = "0.0"

[node name="ToDead" type="Node" parent="StateChart/Root/Aggroed"]
script = ExtResource("14_udhym")
to = NodePath("../../Dead")
event = &"dead"
delay_in_seconds = "0.0"

[node name="Fighting" type="Node" parent="StateChart/Root"]
script = ExtResource("13_ixm0y")

[node name="ToAggroed" type="Node" parent="StateChart/Root/Fighting"]
script = ExtResource("14_udhym")
to = NodePath("../../Aggroed")
event = &"player_undetected"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateChart/Root/Fighting"]
script = ExtResource("14_udhym")
to = NodePath("../../Hurt")
event = &"hurt"
delay_in_seconds = "0.0"

[node name="ToDead" type="Node" parent="StateChart/Root/Fighting"]
script = ExtResource("14_udhym")
to = NodePath("../../Dead")
event = &"dead"
delay_in_seconds = "0.0"

[node name="Hurt" type="Node" parent="StateChart/Root"]
script = ExtResource("13_ixm0y")

[node name="ToAggroed" type="Node" parent="StateChart/Root/Hurt"]
script = ExtResource("14_udhym")
to = NodePath("../../Aggroed")
event = &"recovered"
delay_in_seconds = "0.0"

[node name="ToDeaggroed" type="Node" parent="StateChart/Root/Hurt"]
script = ExtResource("14_udhym")
to = NodePath("../../Deaggroed")
event = &"recovered"
delay_in_seconds = "0.0"

[node name="ToDead" type="Node" parent="StateChart/Root/Hurt"]
script = ExtResource("14_udhym")
to = NodePath("../../Dead")
event = &"dead"
delay_in_seconds = "0.0"

[node name="ToFighting" type="Node" parent="StateChart/Root/Hurt"]
script = ExtResource("14_udhym")
to = NodePath("../../Fighting")
event = &"player_found"
delay_in_seconds = "0.0"

[node name="Dead" type="Node" parent="StateChart/Root"]
script = ExtResource("13_ixm0y")

[node name="StatesLogic" type="Node" parent="."]

[node name="Aggroed" type="Node" parent="StatesLogic"]
script = ExtResource("15_281cp")

[node name="Deaggroed" type="Node" parent="StatesLogic"]
script = ExtResource("16_lpxu5")

[node name="Fighting" type="Node" parent="StatesLogic"]
script = ExtResource("11_rcfw5")

[node name="Hurt" type="Node" parent="StatesLogic"]
script = ExtResource("17_cyc3y")

[node name="Dead" type="Node" parent="StatesLogic"]
script = ExtResource("12_nsewa")

[node name="PatrollTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="BloodSpawner" parent="." instance=ExtResource("20_5vdc7")]

[node name="CollectibleSpawner" type="Node" parent="."]
script = ExtResource("16_77r1b")

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="area_entered" from="EnemyHurtBox" to="." method="_on_enemy_hurt_box_area_entered"]
[connection signal="body_entered" from="AggroArea" to="." method="_on_aggro_area_body_entered"]
[connection signal="body_exited" from="DeaggroArea" to="." method="_on_deaggro_area_body_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/Deaggroed" to="StatesLogic/Deaggroed" method="_on_deaggroed_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Aggroed" to="StatesLogic/Aggroed" method="_on_aggroed_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Fighting" to="StatesLogic/Fighting" method="_on_fighting_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/Root/Hurt" to="StatesLogic/Hurt" method="_on_hurt_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/Dead" to="StatesLogic/Dead" method="_on_dead_state_entered"]
